# bucketsampler

./: .gitignore  README.md  claude.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bucketsampler/: __init__.py  exceptions.py
bucketsampler/cache/: __init__.py  latents.py  metadata.py
bucketsampler/cache/vae_adapters/: __init__.py  protocol.py  sd.py
bucketsampler/cli/: __init__.py  __main__.py  analyze.py  buckets.py  cache.py  precompute.py
bucketsampler/core/: __init__.py  assignment.py  auto_bucket.py  bucket.py  stats.py  strategies.py
bucketsampler/hf/: __init__.py  adapter.py
bucketsampler/presets/: __init__.py  novelai.toml  sd15.toml  sdxl.toml
bucketsampler/torch/: __init__.py  _source.py  dataset.py  sampler.py  transforms.py
examples/: README.md  auto_buckets_inline.py  ddp_training.py  hf_dataset.py  minimal_training_loop.py  precompute_latents.py
tests/: test_cli.py  test_exceptions.py  test_presets.py  test_public_api.py
tests/cache/: test_latents.py  test_metadata.py
tests/cli/: test_analyze.py  test_buckets.py
tests/core/: test_assignment.py  test_auto_bucket.py  test_bucket.py  test_stats.py  test_strategies.py
tests/hf/: test_adapter.py
tests/integration/: test_ddp.py
tests/torch/: conftest.py  test_dataset.py  test_sampler.py  test_transforms.py
