[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bucketsampler"
version = "0.1.0"
description = "Aspect ratio bucketing toolkit for diffusion model training. PyTorch native, DDP correct."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mert Cobanov", email = "mertcobanov@gmail.com" }]
keywords = [
    "diffusion",
    "aspect-ratio",
    "bucketing",
    "pytorch",
    "training",
    "sdxl",
    "dataloader",
    "sampler",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pillow>=10",
    "pydantic>=2",
    "typer>=0.12",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
hf = ["datasets>=2"]
vae = ["diffusers>=0.27", "safetensors>=0.4", "torch>=2.1"]
cache = ["pyarrow>=15"]
analyze = ["matplotlib>=3.7"]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pillow",
    "torch>=2.1",
    "matplotlib>=3.7",
    "datasets>=2",
]

[project.urls]
Homepage = "https://github.com/cobanov/bucketsampler"
Repository = "https://github.com/cobanov/bucketsampler"
Issues = "https://github.com/cobanov/bucketsampler/issues"
Changelog = "https://github.com/cobanov/bucketsampler/releases"

[project.scripts]
bucketsampler = "bucketsampler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bucketsampler"]

[tool.hatch.build.targets.wheel.force-include]
"bucketsampler/presets/sdxl.toml" = "bucketsampler/presets/sdxl.toml"
"bucketsampler/presets/sd15.toml" = "bucketsampler/presets/sd15.toml"
"bucketsampler/presets/novelai.toml" = "bucketsampler/presets/novelai.toml"
"bucketsampler/py.typed" = "bucketsampler/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "bucketsampler",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "PLAN.md",
    "claude.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]
"tests/hf/**" = ["E402", "N802", "N803", "N806"]
"bucketsampler/cli/**" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["bucketsampler"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["datasets", "datasets.*", "diffusers", "diffusers.*", "safetensors", "safetensors.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests that may be slow or require optional deps",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
